--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
     "mongoose": "^8.19.2",
-    "node-cache": "^5.1.2",
-    "nodemailer": "^7.0.10"
+    "node-cache": "^5.1.2"
   }
 }
